# FW-MIQCQP-Heuristic

./: .JuliaFormatter.toml  .gitignore  Manifest.toml  Project.toml  README.md  precompile.jl  run_instance.sh
Boscia.jl/: Project.toml
Boscia.jl/examples/: portfolio.jl
Boscia.jl/src/: MOI_bounded_oracle.jl  blmo_interface.jl  callbacks.jl  custom_bonobo.jl  frank_wolfe_variants.jl  heuristics.jl  interface.jl  managed_blmo.jl  node.jl  polytope_blmos.jl  problem.jl  time_tracking_lmo.jl
Boscia.jl/test/: LMO_test.jl
FixAndProp/: CMakeLists.txt  README.md
FixAndProp/include/fixandprop/: c_interface.h  fp_interface.h  ranking.h  transformers.h
FixAndProp/src/: c_interface.cpp  main.cpp  ranking.cpp  transformers.cpp
FrankWolfe.jl/src/: moi_oracle.jl
src/: HeuristicsStructs.jl  PrimalHeuristic.jl  best_known_sol.jl  fix_and_prop.jl  lns_heuristics.jl  main.jl  parallelisation_strategy.jl  penalty_functions.jl  post_heuristics_callback.jl  presolvers.jl  propagation.jl  simple_parser.jl  simple_stats.jl  utils.jl  variable_bounds.jl
